deskly-infrastructure/kubernetes/dev/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deskly
  labels:
    name: deskly
---
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-cloudwatch
  labels:
    name: amazon-cloudwatch
