deskly-infrastructure/kubernetes/dev/k8s-deskly-location.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deskly-location
  namespace: deskly
spec:
  selector:
    matchLabels:
      app: deskly-location
  template:
    metadata:
      labels:
        app: deskly-location
    spec:
      containers:
        - name: deskly-location
          image: kamilbonkowski/deskly-location:29
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 720Mi
              cpu: 500m
            limits:
              memory: 720Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: deskly-location
  namespace: deskly
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: deskly-location
  type: ClusterIP
